# gptask

./: .gitignore  LICENSE  README.md  gptask.rb  pyproject.toml  requirements.txt
gptask/: __init__.py  conf.py  git_checker.py  gptask.py  openai.py  openai_gptask.py
gptask/.gptask.example/prompts/: doc-reviewer.gptask
gptask_cli/: __init__.py  conf.py  git_checker.py  openai_gptask.py
gptask_cli/.gptask.example/prompts/: bug-fixer.gptask  code-docs.gptask  code-refactor.gptask  code-tester.gptask  doc-reviewer.gptask  general.gptask  security-auditor.gptask
scripts/: test.sh
