[tool.poetry]
name = "gptask"
version = "0.1.0"
description = ""
authors = ["Calum Bird <calum@trelent.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gptask = "gptask:main"
