[tool.poetry]
name = "gptask_cli"
version = "0.1.8"
description = ""
authors = [
    "Calum Bird <calum@trelent.net>",
    "Justin Torre <justin@helicone.ai>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gptask = "gptask_cli:main"
run_gptask = "gptask_cli:main"
